get check documentation and modeling
